--- a/index.html
+++ b/index.html
@@ -1,1 +1,101 @@
-<h1>Hello World!<h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>东野圭吾作品集</title>
+    <link rel="stylesheet" href="styles/main.css"/>
+</head>
+<body>
+    <header>
+        <h1>
+            <a title="东野圭吾">东野圭吾</a>
+        </h1>
+    </header>
+
+    <section class="intro">
+        <h2>著名的日本推理小说作家</h2>
+        <p>
+            东野圭吾早期以清新流畅的校园推理起家，并以缜密细致的剧情布局获得“写实本格派”美名，后期东野的创作逐渐突破传统推理的框架，在悬疑、科幻、社会等多个领域都有所涉猎，同时作品亦能兼具文学性、思想性和娱乐性，不停带给读者新鲜的阅读感受。东野圭吾的作品颇受影视界青睐，绝大多数长篇作品皆被改编成电影、电视剧或舞台剧，短篇作品集几乎都有漫画之改编。
+        </p>
+    </section>
+
+    <section id="timeline" class="container">
+        <ul>
+            <li class="timeline-works">
+                <div class="timeline-img icon">
+                    <img src="img/cd-icon-picture.svg" alt="Picture">
+                </div>
+
+                <div class="timeline-content">
+                    <h3>白夜行</h3>
+                    <p>
+                        《白夜行》是日本作家东野圭吾的代表作，故事围绕着一对有着不同寻常情愫的小学生展开，小说将无望却坚守的凄凉爱情和执著而缜密的冷静推理完美结合，被众多东饭视作东野圭吾作品中的无冕之王，被称为东野笔下最绝望的念想、最悲恸的守望，出版之后引起巨大轰动，使东野圭吾成为天王级作家。2006年，小说被改编成同名电视连续剧，一举囊括第48届日剧学院赏四项大奖。
+                    </p>
+                    <span class="date">1997.1 - 1999.1</span>
+                </div>
+            </li>
+
+            <li class="timeline-works">
+                <div class="timeline-img icon">
+                    <img src="img/cd-icon-picture.svg" alt="Picture">
+                </div>
+
+                <div class="timeline-content">
+                    <h2>白夜行</h2>
+                    <p>
+                        《白夜行》是日本作家东野圭吾的代表作，故事围绕着一对有着不同寻常情愫的小学生展开，小说将无望却坚守的凄凉爱情和执著而缜密的冷静推理完美结合，被众多东饭视作东野圭吾作品中的无冕之王，被称为东野笔下最绝望的念想、最悲恸的守望，出版之后引起巨大轰动，使东野圭吾成为天王级作家。2006年，小说被改编成同名电视连续剧，一举囊括第48届日剧学院赏四项大奖。
+                    </p>
+                    <span class="date">1997.1-1999.1</span>
+                </div>
+            </li>
+
+            <li class="timeline-works">
+                <div class="timeline-img icon">
+                    <img src="img/cd-icon-picture.svg" alt="Picture">
+                </div>
+
+                <div class="timeline-content">
+                    <h2>白夜行</h2>
+                    <p>
+                        《白夜行》是日本作家东野圭吾的代表作，故事围绕着一对有着不同寻常情愫的小学生展开，小说将无望却坚守的凄凉爱情和执著而缜密的冷静推理完美结合，被众多东饭视作东野圭吾作品中的无冕之王，被称为东野笔下最绝望的念想、最悲恸的守望，出版之后引起巨大轰动，使东野圭吾成为天王级作家。2006年，小说被改编成同名电视连续剧，一举囊括第48届日剧学院赏四项大奖。
+                    </p>
+                    <span class="date">1997.1-1999.1</span>
+                </div>
+            </li>
+
+            <li class="timeline-works">
+                <div class="timeline-img icon">
+                    <img src="img/cd-icon-picture.svg" alt="Picture">
+                </div>
+
+                <div class="timeline-content">
+                    <h2>白夜行</h2>
+                    <p>
+                        《白夜行》是日本作家东野圭吾的代表作，故事围绕着一对有着不同寻常情愫的小学生展开，小说将无望却坚守的凄凉爱情和执著而缜密的冷静推理完美结合，被众多东饭视作东野圭吾作品中的无冕之王，被称为东野笔下最绝望的念想、最悲恸的守望，出版之后引起巨大轰动，使东野圭吾成为天王级作家。2006年，小说被改编成同名电视连续剧，一举囊括第48届日剧学院赏四项大奖。
+                    </p>
+                    <span class="date">1997.1-1999.1</span>
+                </div>
+            </li>
+
+            <li class="timeline-works">
+                <div class="timeline-img icon">
+                    <img src="img/cd-icon-picture.svg" alt="Picture">
+                </div>
+
+                <div class="timeline-content">
+                    <h2>白夜行</h2>
+                    <p>
+                        《白夜行》是日本作家东野圭吾的代表作，故事围绕着一对有着不同寻常情愫的小学生展开，小说将无望却坚守的凄凉爱情和执著而缜密的冷静推理完美结合，被众多东饭视作东野圭吾作品中的无冕之王，被称为东野笔下最绝望的念想、最悲恸的守望，出版之后引起巨大轰动，使东野圭吾成为天王级作家。2006年，小说被改编成同名电视连续剧，一举囊括第48届日剧学院赏四项大奖。
+                    </p>
+                    <span class="date">1997.1-1999.1</span>
+                </div>
+            </li>
+        </ul>
+    </section>
+
+    <footer id="footer">
+        <p>&copy; 2017 reasoning association, all rights reserved.</p>
+    </footer>
+</body>
+</html>
