Add content for timeline works and adjust responsive styles.

--- a/index.html
+++ b/index.html
@@ -9,92 +9,102 @@
 <body>
     <header>
         <h1>
-            <a title="东野圭吾">东野圭吾</a>
+            <span class="name">东野圭吾</span>
+            <span class="title">日本推理小说之王</span>
         </h1>
     </header>
 
     <section class="intro">
-        <h2>著名的日本推理小说作家</h2>
-        <p>
-            东野圭吾早期以清新流畅的校园推理起家，并以缜密细致的剧情布局获得“写实本格派”美名，后期东野的创作逐渐突破传统推理的框架，在悬疑、科幻、社会等多个领域都有所涉猎，同时作品亦能兼具文学性、思想性和娱乐性，不停带给读者新鲜的阅读感受。东野圭吾的作品颇受影视界青睐，绝大多数长篇作品皆被改编成电影、电视剧或舞台剧，短篇作品集几乎都有漫画之改编。
-        </p>
+        <h2>著名的推理小说作家</h2>
+        <div class="intro-content">
+            <img class="photo" src="img/photo.jpeg">
+            <p>
+                <strong>东野圭吾</strong>早期以清新流畅的校园推理起家，并以缜密细致的剧情布局获得“写实本格派”美名，后期东野的创作逐渐突破传统推理的框架，在悬疑、科幻、社会等多个领域都有所涉猎，同时作品亦能兼具文学性、思想性和娱乐性，不停带给读者新鲜的阅读感受。东野圭吾的作品颇受影视界青睐，绝大多数长篇作品皆被改编成电影、电视剧或舞台剧，短篇作品集几乎都有漫画之改编。
+            </p>
+        </div>
     </section>
 
-    <section id="timeline" class="container">
+    <section class="container">
         <ul>
             <li class="timeline-works">
-                <div class="timeline-img icon">
-                    <img src="img/cd-icon-picture.svg" alt="Picture">
+                <div class="timeline-icon">
+                    <img src="styles/icon-book.svg">
                 </div>
-
                 <div class="timeline-content">
-                    <h3>白夜行</h3>
-                    <p>
-                        《白夜行》是日本作家东野圭吾的代表作，故事围绕着一对有着不同寻常情愫的小学生展开，小说将无望却坚守的凄凉爱情和执著而缜密的冷静推理完美结合，被众多东饭视作东野圭吾作品中的无冕之王，被称为东野笔下最绝望的念想、最悲恸的守望，出版之后引起巨大轰动，使东野圭吾成为天王级作家。2006年，小说被改编成同名电视连续剧，一举囊括第48届日剧学院赏四项大奖。
-                    </p>
-                    <span class="date">1997.1 - 1999.1</span>
+                    <img class="timeline-img" src="img/baiyexing.jpg">
+                    <div class="timeline-desc">
+                        <h3>白夜行</h3>
+                        <p class="first-para">是日本作家东野圭吾的代表作，故事围绕着一对有着不同寻常情愫的小学生展开，小说将无望却坚守的凄凉爱情和执著而缜密的冷静推理完美结合，被众多东饭视作东野圭吾作品中的无冕之王，被称为东野笔下最绝望的念想、最悲恸的守望，出版之后引起巨大轰动，使东野圭吾成为天王级作家。2006年，小说被改编成同名电视连续剧，一举囊括第48届日剧学院赏四项大奖。</p>
+                    </div>
+                    <p class="date">1997.1 - 1999.1</p>
                 </div>
             </li>
 
             <li class="timeline-works">
-                <div class="timeline-img icon">
-                    <img src="img/cd-icon-picture.svg" alt="Picture">
+                <div class="timeline-icon">
+                    <img src="styles/icon-book.svg">
                 </div>
-
                 <div class="timeline-content">
-                    <h2>白夜行</h2>
-                    <p>
-                        《白夜行》是日本作家东野圭吾的代表作，故事围绕着一对有着不同寻常情愫的小学生展开，小说将无望却坚守的凄凉爱情和执著而缜密的冷静推理完美结合，被众多东饭视作东野圭吾作品中的无冕之王，被称为东野笔下最绝望的念想、最悲恸的守望，出版之后引起巨大轰动，使东野圭吾成为天王级作家。2006年，小说被改编成同名电视连续剧，一举囊括第48届日剧学院赏四项大奖。
-                    </p>
-                    <span class="date">1997.1-1999.1</span>
+                    <img class="timeline-img" src="img/shisheng.jpeg">
+                    <div class="timeline-desc">
+                        <h3>时生</h3>
+                        <p class="first-para">为东野圭吾迄今风格最独特的一部，以惊天动地的想象和鬼斧神工的解谜，将幻想、悬疑、穿越、推理、亲情熔为一炉。</p>
+                        <p>如果有一天你的孩子从未来来到你的身边，参与你的青春疯狂，引导你的愚蠢幼稚，你会怎么样？时间穿越本就是一个悖论，究竟是我们创造了未来，还是时间本身引导了未来？</p>
+                        <p>即使只有那么一瞬间，我也能看到未来 -- 时生，我在花屋敷等你！</p>
+                    </div>
+                    <p class="date">2002</p>
                 </div>
             </li>
 
             <li class="timeline-works">
-                <div class="timeline-img icon">
-                    <img src="img/cd-icon-picture.svg" alt="Picture">
+                <div class="timeline-icon">
+                    <img src="styles/icon-book.svg">
                 </div>
-
                 <div class="timeline-content">
-                    <h2>白夜行</h2>
-                    <p>
-                        《白夜行》是日本作家东野圭吾的代表作，故事围绕着一对有着不同寻常情愫的小学生展开，小说将无望却坚守的凄凉爱情和执著而缜密的冷静推理完美结合，被众多东饭视作东野圭吾作品中的无冕之王，被称为东野笔下最绝望的念想、最悲恸的守望，出版之后引起巨大轰动，使东野圭吾成为天王级作家。2006年，小说被改编成同名电视连续剧，一举囊括第48届日剧学院赏四项大奖。
-                    </p>
-                    <span class="date">1997.1-1999.1</span>
+                    <img class="timeline-img" src="img/huanye.jpg">
+                    <div class="timeline-desc">
+                        <h3>幻夜</h3>
+                        <p class="first-para">正是一个现代版的寓言。一个关于欲望之恶，在具备了人的行事能力之后，将拥有怎样摧毁人性的力量的象征性寓言。</p>
+                        <p>作为《白夜行》姊妹篇，2004年入围第131届直木奖。我们只能走在幻夜的路上，即使四周明亮有如白昼，那也仅是假象。就算与你共度的每个夜晚都是幻夜，我也愿为你化身为影，至死不渝！</p>
+                        <p>可怕而艳丽的女人，卑微而有野心的男人。绝望是件好事，它会让你在白夜黑昼的世界里无牵绊的游走。绝望之极便是希望之初。</p>
+                    </div>
+                    <p class="date">2004</p>
                 </div>
             </li>
 
             <li class="timeline-works">
-                <div class="timeline-img icon">
-                    <img src="img/cd-icon-picture.svg" alt="Picture">
+                <div class="timeline-icon">
+                    <img src="styles/icon-book.svg">
                 </div>
-
                 <div class="timeline-content">
-                    <h2>白夜行</h2>
-                    <p>
-                        《白夜行》是日本作家东野圭吾的代表作，故事围绕着一对有着不同寻常情愫的小学生展开，小说将无望却坚守的凄凉爱情和执著而缜密的冷静推理完美结合，被众多东饭视作东野圭吾作品中的无冕之王，被称为东野笔下最绝望的念想、最悲恸的守望，出版之后引起巨大轰动，使东野圭吾成为天王级作家。2006年，小说被改编成同名电视连续剧，一举囊括第48届日剧学院赏四项大奖。
-                    </p>
-                    <span class="date">1997.1-1999.1</span>
+                    <img class="timeline-img" src="img/xianyiren.jpeg">
+                    <div class="timeline-desc">
+                        <h3>嫌疑人X的献身</h3>
+                        <p class="first-para">该书讲述了在僻静街道旁的一家杂货店，只要写下烦恼投进店前门卷帘门的投信口，第二天就会在店后的牛奶箱里得到回答：因男友身患绝症，年轻女孩月兔在爱情与梦想间徘徊；松冈克郎为了音乐梦想离家漂泊，却在现实中寸步难行；少年浩介面临家庭巨变，挣扎在亲情与未来的迷茫中……他们将困惑写成信投进杂货店，奇妙的事情随即不断发生。</p>
+                        <p>爱一个人最极端的方式是什么？到底是怎样的邂逅可以让人舍命不悔？你为我带来了重生的曙光，守护你成为我生存的所有意义，我必须用尽一切手段避免你陷入不幸，纵然毁灭自己，毁灭他人。有些时候，深情也是一场悲剧。</p>
+                    </div>
+                    <p class="date">2005</p>
                 </div>
             </li>
 
             <li class="timeline-works">
-                <div class="timeline-img icon">
-                    <img src="img/cd-icon-picture.svg" alt="Picture">
+                <div class="timeline-icon">
+                    <img src="styles/icon-book.svg">
                 </div>
-
                 <div class="timeline-content">
-                    <h2>白夜行</h2>
-                    <p>
-                        《白夜行》是日本作家东野圭吾的代表作，故事围绕着一对有着不同寻常情愫的小学生展开，小说将无望却坚守的凄凉爱情和执著而缜密的冷静推理完美结合，被众多东饭视作东野圭吾作品中的无冕之王，被称为东野笔下最绝望的念想、最悲恸的守望，出版之后引起巨大轰动，使东野圭吾成为天王级作家。2006年，小说被改编成同名电视连续剧，一举囊括第48届日剧学院赏四项大奖。
-                    </p>
-                    <span class="date">1997.1-1999.1</span>
+                    <img class="timeline-img" src="img/jieyou.jpeg">
+                    <div class="timeline-desc">
+                        <h3>解忧杂货店</h3>
+                        <p class="first-para">该书讲述了在僻静街道旁的一家杂货店，只要写下烦恼投进店前门卷帘门的投信口，第二天就会在店后的牛奶箱里得到回答：因男友身患绝症，年轻女孩月兔在爱情与梦想间徘徊；松冈克郎为了音乐梦想离家漂泊，却在现实中寸步难行；少年浩介面临家庭巨变，挣扎在亲情与未来的迷茫中……他们将困惑写成信投进杂货店，奇妙的事情随即不断发生。</p>
+                        <p>“在《解忧杂货店》中，穿越时空的不是人而是信。”东野圭吾说，“尽管这是一次非常艰难的尝试，但刚一动笔，各种故事就一个接一个地浮现出来。如今回顾写作的过程，脑海中还常常在思索面临人生转折的关头该何去何从。无论从哪种意义来说，这都是很好的体验。”</p>
+                    </div>
+                    <p class="date">2012</p>
                 </div>
             </li>
         </ul>
     </section>
 
-    <footer id="footer">
+    <footer>
         <p>&copy; 2017 reasoning association, all rights reserved.</p>
     </footer>
 </body>
